--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-route": "1.3.x",
     "angularjs-datepicker": "~0.2.4",
     "leaflet-draw": "leaflet/leaflet.draw#~0.2.4",
-    "lodash": "~3.9.3"
+    "lodash": "~3.9.3",
+    "angular-base64": "~2.0.5"
   },
   "resolutions": {
     "angular": "~1.3.x"
