--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "browserify": "^11.0.1",
+    "cssify": "^0.7.0",
     "http-server": "^0.8.0"
   },
   "scripts": {
