--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "license": "MIT",
   "devDependencies": {
     "angular-simple-logger": "^0.1.4",
-    "babelify": "*",
-    "browserify": "*",
-    "browserify-ngannotate": "*",
+    "babelify": "6.2.0",
+    "browserify": "^11.1.0",
+    "browserify-ngannotate": "^1.0.1",
     "gulp": "^3.9.0",
     "karma": "^0.13.10",
     "npdc-gulp": "npolar/npdc-gulp",
-    "partialify": "*"
+    "partialify": "^3.1.3"
   },
   "scripts": {
     "start": "http-server -a 0.0.0.0 -p 8000"
