--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "repository": "https://github.com/npolar/sighting",
   "license": "MIT",
   "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
     "angular-simple-logger": "^0.1.4",
-    "babelify": "6.2.0",
-    "browserify": "^11.1.0",
-    "browserify-ngannotate": "^1.0.1",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "browserify-ngannotate": "^2.0.0",
+    "partialify": "^3.1.3",
     "gulp": "^3.9.0",
     "karma": "^0.13.10",
-    "npdc-gulp": "npolar/npdc-gulp",
-    "partialify": "^3.1.3"
+    "npdc-gulp": "npolar/npdc-gulp"
   },
   "scripts": {
     "start": "http-server -a 0.0.0.0 -p 8000"
@@ -21,25 +22,22 @@
   "dependencies": {
     "angular": "^1.4.7",
     "angular-leaflet-directive": "^0.7.11",
-    "angular-npolar": "npolar/angular-npolar",
-    "angular-resource": "^1.4.7",
-    "angular-route": "^1.4.7",
     "angular-smart-table": "^2.1.5",
     "angularjs-datepicker": "^0.2.6",
     "elasticsearch": "^6.0.0",
-    "formula": "npolar/formula",
     "jszip": "^2.5.0",
     "leaflet": "^0.7.3",
     "leaflet-draw": "^0.2.3",
     "lodash": "^3.10.1",
     "npdc-common": "npolar/npdc-common",
+    "chronopic.js": "npolar/chronopic.js",
     "path": "^0.12.7",
     "purecss": "^0.6.0",
     "xlsx": "git+https://github.com/SheetJS/js-xlsx.git"
   },
   "browserify": {
     "transform": [
-      "babelify",
+      ["babelify",{"presets": ["es2015"]}],
       "partialify",
       "browserify-ngannotate"
     ]
