--- a/package.json
+++ b/package.json
@@ -22,22 +22,30 @@
   "dependencies": {
     "angular": "^1.4.7",
     "angular-leaflet-directive": "^0.7.11",
+    "angular-sanitize": "^1.4.9",
     "angular-smart-table": "^2.1.5",
     "angularjs-datepicker": "^0.2.6",
+    "chronopic.js": "npolar/chronopic.js",
     "elasticsearch": "^6.0.0",
     "jszip": "^2.5.0",
     "leaflet": "^0.7.3",
     "leaflet-draw": "^0.2.3",
     "lodash": "^3.10.1",
     "npdc-common": "npolar/npdc-common",
-    "chronopic.js": "npolar/chronopic.js",
     "path": "^0.12.7",
     "purecss": "^0.6.0",
     "xlsx": "git+https://github.com/SheetJS/js-xlsx.git"
   },
   "browserify": {
     "transform": [
-      ["babelify",{"presets": ["es2015"]}],
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
+      ],
       "partialify",
       "browserify-ngannotate"
     ]
