--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
   "repository": "https://github.com/npolar/sighting",
   "license": "MIT",
   "devDependencies": {
-    "babel-preset-es2015": "^6.3.13",
-    "angular-simple-logger": "^0.1.4",
+     "babel-preset-es2015": "^6.3.13",
+    "gulp": "^3.9.0",
+    "should": "^7.1.0",
+    "npdc-gulp": "npolar/npdc-gulp",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "browserify-ngannotate": "^2.0.0",
     "partialify": "^3.1.3",
-    "gulp": "^3.9.0",
-    "karma": "^0.13.10",
-    "npdc-gulp": "npolar/npdc-gulp"
+    "browserify": {
+    "transform": [
+      ["babelify",{"presets": ["es2015"]}],
+      "partialify",
+      "browserify-ngannotate"
+    ]
+  }
   },
   "scripts": {
     "start": "http-server -a 0.0.0.0 -p 8000"
